<resources>
    <string name="app_name">BFHSLibrary</string>
    <string name="mainScreenLabel">Big Foot High School Library</string>
    <string name="loginButtonLabel">Sign In With Google</string>
    <string name="mainScreenInfo">\n\n\nLibrary Management App\n Written in Java\n For FBLA\n Author: Hunter Sharpe</string>
    <string name="server_client_id">636392776785-lv0j7sdfsovegm0kgomjcpkdrh8b8e5f.apps.googleusercontent.com</string>
    <string name="text_home">Home</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_search">Search</string>

    <string name="profPicDesc">Profile Picture</string>
    <string name="welcomeBackLabel">Welcome,</string>
    <string name="user">User</string>
    <string name="signOutButtonLabel">Sign Out</string>
    <string name="ccobLabel">Current Checked Out Books</string>
    <string name="prbLabel">Previously Read Books</string>
    <string name="barcodeEmptyLabel">Search or Scan</string>
    <string name="scanButtonLabel">Scan</string>
    <string name="checkOutLabel">Check Out</string>
    <string name="search_hint">Book Name</string>
    <string name="sbtText">Book Title\ \ \ \ \ :</string>
    <string name="sbaText">Book Author    :</string>
    <string name="ccotText">Currently Checked Out To:</string>
    <string name="nullText">Null</string>
    <string name="topNotifEmpty">Horay! No Books Due</string>
    <string name="emptyString" />
    <string name="search">Please enter Title/Author</string>
    <string name="popupReserveText">Reserve</string>
    <string name="popupCancelText">Cancel</string>
    <string name="popupPicDesc">Book Cover</string>
    <string name="actionBarLogOut">Log Out</string>
    <string name="bookCoverDesc">Book Cover</string>
    <string name="notification_item_string">Notifications</string>
    <string name="wooHooText">Woo Hoo! No Books Due!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
