<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hsDiv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.huntersharpe.bfhslibrary.Home">

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="21dp"
        android:background="@drawable/divider"
        android:id="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:contentDescription="@string/profPicDesc"
        android:src="?android:attr/alertDialogIcon" />

    <TextView
        android:id="@+id/welcomeBackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcomeBackLabel"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/namePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/welcomeBackTextView"
        android:layout_alignBottom="@+id/welcomeBackTextView"
        android:layout_toEndOf="@+id/welcomeBackTextView"
        android:text="@string/user"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ccobTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/welcomeBackTextView"
        android:layout_below="@+id/view"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/ccobLabel"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/prbTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ccobTextView"
        android:layout_below="@+id/ccobTextView"
        android:layout_marginTop="94dp"
        android:text="@string/prbLabel"
        android:textSize="18sp" />

</RelativeLayout>
