<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:padding="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="291dp"
        android:layout_height="446dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupAuthorTextView" />

        <Button
            android:id="@+id/popupReserveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/popupReserveText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/popupCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/popupCancelText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/popupBookCover"
            android:layout_width="74dp"
            android:layout_height="78dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/popupPicDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <TextView
            android:id="@+id/popupTitleTextView"
            android:layout_width="161dp"
            android:layout_height="45dp"
            android:layout_marginStart="64dp"
            android:text="@string/nullText"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupBookCover" />

        <TextView
            android:id="@+id/popupAuthorTextView"
            android:layout_width="162dp"
            android:layout_height="40dp"
            android:layout_marginStart="64dp"
            android:text="@string/nullText"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popupTitleTextView" />

        <TextView
            android:id="@+id/popupDescTextBox"
            android:layout_width="290dp"
            android:layout_height="217dp"
            android:layout_marginTop="7dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>